--- a/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
+++ b/Course 3 - Advance Computer Vision/W2/assignment/C3W2_Assignment.ipynb
@@ -1456,8 +1456,8 @@
       "source": [
         "### START CODE HERE ###\n",
         "\n",
-        "tmp_box_predictor_checkpoint = tf.compat.v2.train.Checkpoint(_base_tower_layers_for_heads=detection_model._box_predictor._base_tower_layers_for_heads,\n",
-        "                                                   _box_prediction_heads= detection_model._box_predictor._box_prediction_head)\n",
+        "tmp_box_predictor_checkpoint = tf.train.Checkpoint(_base_tower_layers_for_heads = detection_model._box_predictor._base_tower_layers_for_heads,\n",
+        "                                                   _box_prediction_head = detection_model._box_predictor._box_prediction_head)\n",
         "\n",
         "\n",
         "\n",
@@ -2880,9 +2880,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
