--- a/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_4_GradCam.ipynb
+++ b/Course 3 - Advance Computer Vision/W4/ungraded_labs/C3_W4_Lab_4_GradCam.ipynb
@@ -6,11 +6,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "language_info": {
